bundle/manifests/certificate-job-operator-controller-manager-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: certificate-job-operator
    control-plane: controller-manager
  name: certificate-job-operator-controller-manager-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/name: certificate-job-operator
    control-plane: controller-manager
status:
  loadBalancer: {}
