bundle/manifests/certificatejob-broker-egress_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: certificatejob-broker-egress
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          certificate-job-broker: "true"
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: certificate-job-operator
  policyTypes:
  - Egress
